--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^3.0.1",
-    "sweetalert2": "^11.22.0"
+    "sweetalert2": "^11.22.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
