--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ EMAIL_PASSWORD=edrx rwbw gkzw raky
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
+MONGO_URI=mongodb+srv://adminUser:Admin%401234@cluster0.xqgfr5n.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+REACT_APP_API_URL=https://entitlement-review.onrender.com
