--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "ldapjs": "^3.0.7",
     "moment": "^2.30.1",
     "mongoose": "^8.9.7",
     "multer": "^2.0.0",
